<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/cell_phones"
            android:icon="@drawable/ic_menu_cell"
            android:title="@string/cell_phones_section" />
        <item
            android:id="@+id/computers"
            android:icon="@drawable/ic_menu_computer"
            android:title="@string/computers_section" />
        <item
            android:id="@+id/musical_instruments"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/musical_instruments_section" />
        <item
            android:id="@+id/personal_care"
            android:icon="@drawable/ic_menu_personalcare"
            android:title="@string/personal_care_section" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/contact_us_section" />
            <item
                android:id="@+id/show_map"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/store_location_section" />
            <item
                android:id="@+id/get_json"
                android:icon="@drawable/ic_menu_share"
                android:title="Get Json" />
        </menu>
    </item>

</menu>
